tests/__snapshots__/ingress-annotations.prod.prod.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ingress-annotations.prod.prod 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: \\"1234\\"
    kubeWorkflow/gitBranch: feature-branch-1
    kubeWorkflow/mainNamespace: \\"true\\"
  labels:
    application: test-ingress-annotations.prod
  name: test-ingress-annotations.prod
---
apiVersion: v1
data:
  MB_ADMIN_EMAIL: admin@fabrique.social.gouv.fr
  MB_ANON_TRACKING_ENABLED: \\"false\\"
  MB_APPLICATION_LOGO_URL: https://socialgouv.github.io/support/_media/marianne.jpeg
  MB_APPLICATION_NAME: metabase
  MB_DB_TYPE: postgres
  MB_EMAIL_FROM_ADDRESS: contact@fabrique.social.gouv.fr
  MB_ENABLE_EMBEDDING: \\"true\\"
  MB_ENABLE_PUBLIC_SHARING: \\"true\\"
  MB_SITE_LOCALE: fr
  MB_SITE_NAME: Fabrique des ministères sociaux
kind: ConfigMap
metadata:
  labels:
    application: test-ingress-annotations.prod
    component: metabase
  name: metabase
  namespace: test-ingress-annotations.prod
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: \\"\\"
    kapp.k14s.io/disable-default-ownership-label-rules: \\"\\"
  labels:
    application: test-ingress-annotations.prod
    component: metabase
  name: metabase
  namespace: test-ingress-annotations.prod
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    component: metabase
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/change-group: autodevops/test-ingress-annotations.prod
    kapp.k14s.io/change-group.metabase: autodevops/metabase.test-ingress-annotations.prod
    kapp.k14s.io/create-strategy: fallback-on-update
    kapp.k14s.io/disable-default-label-scoping-rules: \\"\\"
    kapp.k14s.io/disable-default-ownership-label-rules: \\"\\"
    kapp.k14s.io/nonce: \\"\\"
    kapp.k14s.io/update-strategy: fallback-on-replace
  labels:
    application: test-ingress-annotations.prod
    component: metabase
  name: metabase
  namespace: test-ingress-annotations.prod
spec:
  replicas: 1
  selector:
    matchLabels:
      component: metabase
  template:
    metadata:
      labels:
        application: null
        component: metabase
    spec:
      containers:
      - env: null
        envFrom:
        - configMapRef:
            name: metabase
        image: metabase/metabase:v0.41.6
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 5
        name: metabase
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          failureThreshold: 15
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 0
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 1000m
            memory: 2048Mi
          requests:
            cpu: 500m
            memory: 512Mi
        startupProbe:
          failureThreshold: 12
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 240
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: \\"true\\"
  labels:
    application: test-ingress-annotations.prod
    component: metabase
  name: metabase
  namespace: test-ingress-annotations.prod
spec:
  rules:
  - host: metabase-test-ingress-annotations.prod.fabrique.social.gouv.fr
    http:
      paths:
      - backend:
          service:
            name: metabase
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - metabase-test-ingress-annotations.prod.fabrique.social.gouv.fr
    secretName: test-ingress-annotations.prod-crt
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-ingress-annotations.prod
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: ingress-controller
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
"
`;
