tests/__snapshots__/jobs-uses-degit.dev.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build manifests for test "jobs-uses-degit" with env "dev" 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: \\"1234\\"
    git/branch: refs/heads/feature-branch-1
    janitor/ttl: 7d
  labels:
    application: test-jobs-uses-degit
    cert: wildcard
  name: test-jobs-uses-degit-feature-branch-1
  namespace: test-jobs-uses-degit-feature-branch-1
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  name: default
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  labels: {}
  name: jobs-shared-storage
  namespace: awesome-ci
spec:
  accessModes:
  - ReadWriteMany
  resources:
    requests:
      storage: 2Gi
  storageClassName: azurefile
---
apiVersion: batch/v1beta1
kind: CronJob
metadata:
  name: jobci-clean-workflow
  namespace: awesome-ci
spec:
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - command:
            - /bin/bash
            - -c
            - |
              echo \\"$KUBECONFIG\\" > ~/.kube/config
              export KUBECONFIG=~/.kube/config
              export JOB_NAMESPACE=\\"awesome-ci\\"
              ACTIVE_JOBS=$(kubectl get jobs -n $JOB_NAMESPACE -o json | jq \\".items | .[] | select(.status.active > 0).metadata.name\\")
              for subdir in /workflow/*; do

                [ -d \\"$subdir\\" ] || continue
                subdir_basename=\${subdir##*/}
                if ! echo $ACTIVE_JOBS | grep -e \\"job-\${subdir_basename}\\"; then
                  echo \\"Cleaning '$subdir'\\"
                  rm -rf $subdir
                fi
              done
            envFrom:
            - secretRef:
                name: kubeconfig
            image: bitnami/kubectl:latest
            imagePullPolicy: IfNotPresent
            name: job
            volumeMounts:
            - mountPath: /workflow
              name: workflow
          restartPolicy: Never
          volumes:
          - name: workflow
            persistentVolumeClaim:
              claimName: jobs-shared-storage
  schedule: 0 0 * * *
---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    janitor/ttl: \\"1800\\"
    kapp.k14s.io/change-group: autodevops/test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/change-group.db: autodevops/db.test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/change-group.db..create-db: autodevops/db..create-db.test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/change-group.db.create-db: autodevops/db.create-db.test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/change-rule.db..create-secret: upsert after upserting autodevops/db..create-secret.test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/nonce: \\"\\"
    kapp.k14s.io/update-strategy: fallback-on-replace
  name: job-feature-branch-1-db--create-db
  namespace: awesome-ci
spec:
  activeDeadlineSeconds: 3600
  backoffLimit: 3
  template:
    metadata:
      annotations: {}
      labels: {}
    spec:
      containers:
      - command:
        - /bin/bash
        - -c
        - |
          /action/ensure-db.sh
        env:
        - name: NEW_DB_NAME
          valueFrom:
            secretKeyRef:
              key: PGDATABASE
              name: pg-user-feature-branch-1
        - name: NEW_USER
          valueFrom:
            secretKeyRef:
              key: PGUSER
              name: pg-user-feature-branch-1
        - name: NEW_PASSWORD
          valueFrom:
            secretKeyRef:
              key: PGPASSWORD
              name: pg-user-feature-branch-1
        - name: PGHOST
          valueFrom:
            secretKeyRef:
              key: PGHOST
              name: pg-user-feature-branch-1
        - name: NEW_DB_EXTENSIONS
          value: hstore pgcrypto citext uuid-ossp postgis pg_trgm unaccent
        envFrom:
        - secretRef:
            name: pg-scaleway
        image: ghcr.io/socialgouv/docker/psql:6.70.0
        imagePullPolicy: IfNotPresent
        name: job
        volumeMounts:
        - mountPath: /workspace
          name: workspace
        - mountPath: /action
          name: action
        - mountPath: /workflow
          name: workflow
          subPath: feature-branch-1/ffac537e6cbbf934b08745a378932722df287a53
      initContainers:
      - command:
        - sh
        - -c
        - npx degit SocialGouv/kube-workflow/jobs/create-db#master /action
        image: node:17
        name: degit-action
        securityContext:
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
        - mountPath: /action
          name: action
      restartPolicy: Never
      volumes:
      - emptyDir: {}
        name: workspace
      - emptyDir: {}
        name: action
      - name: workflow
        persistentVolumeClaim:
          claimName: jobs-shared-storage
  ttlSecondsAfterFinished: 1800
---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    janitor/ttl: \\"1800\\"
    kapp.k14s.io/change-group: autodevops/test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/change-group.db: autodevops/db.test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/change-group.db..create-secret: autodevops/db..create-secret.test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/change-group.db.create-secret: autodevops/db.create-secret.test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/nonce: \\"\\"
    kapp.k14s.io/update-strategy: fallback-on-replace
  name: job-feature-branch-1-db--create-secret
  namespace: awesome-ci
spec:
  activeDeadlineSeconds: 3600
  backoffLimit: 3
  template:
    metadata:
      annotations: {}
      labels: {}
    spec:
      containers:
      - command:
        - /bin/bash
        - -c
        - |
          /action/create-secret.sh
        env:
        - name: DB_SECRET_NAME
          value: pg-user-feature-branch-1
        - name: JOB_NAMESPACE
          value: awesome-ci
        - name: NAMESPACE
          value: test-jobs-uses-degit-feature-branch-1
        - name: PGDATABASE
          value: autodevops_feature-branch-1
        - name: PGUSER
          value: user_feature-branch-1
        envFrom:
        - secretRef:
            name: pg-scaleway
        - secretRef:
            name: kubeconfig
        image: bitnami/kubectl:latest
        imagePullPolicy: IfNotPresent
        name: job
        volumeMounts:
        - mountPath: /workspace
          name: workspace
        - mountPath: /action
          name: action
        - mountPath: /workflow
          name: workflow
          subPath: feature-branch-1/ffac537e6cbbf934b08745a378932722df287a53
      initContainers:
      - command:
        - sh
        - -c
        - npx degit SocialGouv/kube-workflow/jobs/create-db#master /action
        image: node:17
        name: degit-action
        securityContext:
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
        - mountPath: /action
          name: action
      restartPolicy: Never
      volumes:
      - emptyDir: {}
        name: workspace
      - emptyDir: {}
        name: action
      - name: workflow
        persistentVolumeClaim:
          claimName: jobs-shared-storage
  ttlSecondsAfterFinished: 1800
---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    kapp.k14s.io/change-group: autodevops/post-test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/change-rule: upsert after upserting autodevops/test-jobs-uses-degit-feature-branch-1
    kapp.k14s.io/nonce: \\"\\"
    kapp.k14s.io/update-strategy: fallback-on-replace
  name: jobci-post-operations
  namespace: awesome-ci
spec:
  activeDeadlineSeconds: 3600
  backoffLimit: 1
  template:
    metadata:
      annotations: {}
      labels: {}
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - rm -rf /workflow/*
        image: alpine:3
        imagePullPolicy: IfNotPresent
        name: job
        volumeMounts:
        - mountPath: /workflow
          name: workflow
          subPath: feature-branch-1/ffac537e6cbbf934b08745a378932722df287a53
      restartPolicy: Never
      volumes:
      - name: workflow
        persistentVolumeClaim:
          claimName: jobs-shared-storage
  ttlSecondsAfterFinished: 1800
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-jobs-uses-degit-feature-branch-1
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: ingress-controller
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
"
`;
