tests/__snapshots__/jobs-uses-degit.prod.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build manifests for test "jobs-uses-degit" with env "prod" 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: \\"1234\\"
    git/branch: refs/heads/feature-branch-1
  labels:
    application: test-jobs-uses-degit
  name: test-jobs-uses-degit
  namespace: test-jobs-uses-degit
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  name: default
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-jobs-uses-degit
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: ingress-controller
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
"
`;
