tests/__snapshots__/jobs-uses-relative.preprod.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jobs-uses-relative.preprod 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: \\"1234\\"
    kubeWorkflow/gitBranch: feature-branch-1
    kubeWorkflow/mainNamespace: \\"true\\"
  labels:
    application: test-jobs-uses-relative
    cert: wildcard
  name: test-jobs-uses-relative-preprod
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-jobs-uses-relative-preprod
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: ingress-controller
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
"
`;
