tests/__snapshots__/jobs-uses-relative.prod.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jobs-uses-relative.prod 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: \\"1234\\"
    git/branch: refs/heads/feature-branch-1
  labels:
    application: test-jobs-uses-relative
  name: test-jobs-uses-relative
  namespace: test-jobs-uses-relative
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-jobs-uses-relative
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: ingress-controller
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
"
`;
