tests/__snapshots__/metabase.dev.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metabase.dev 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: \\"1234\\"
    janitor/ttl: 7d
    kubeWorkflow/gitBranch: feature-branch-1
    kubeWorkflow/mainNamespace: \\"true\\"
  labels:
    application: test-metabase
    cert: wildcard
  name: test-metabase-feature-branch-1
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  name: default
  namespace: test-metabase-feature-branch-1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-metabase-feature-branch-1
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: ingress-controller
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
"
`;
