tests/__snapshots__/metabase.preprod.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metabase.preprod 1`] = `
"apiVersion: v1
automountServiceAccountToken: false
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: \\"1234\\"
    git/branch: refs/heads/feature-branch-1
  labels:
    application: test-metabase
    cert: wildcard
  name: test-metabase-preprod
  namespace: test-metabase-preprod
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-metabase-preprod
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: ingress-controller
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
"
`;
