tests/__snapshots__/redirect.dev.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build manifests for test "redirect" with env "dev" 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: \\"1234\\"
    git/branch: refs/heads/feature-branch-1
    janitor/ttl: 7d
  labels:
    application: test-redirect
    cert: wildcard
  name: test-redirect-feature-branch-1
  namespace: test-redirect-feature-branch-1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-redirect-feature-branch-1
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: ingress-controller
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy/source: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
"
`;
